--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests/"
+    "test": "eslint . && mocha tests/"
   },
   "repository": {
     "type": "git",
