Recommend eslint import plugin config

--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "homepage": "https://github.com/github/eslint-plugin-github#readme",
   "peerDependencies": {
-    "eslint": ">=3.19.0"
+    "eslint": ">=3.19.0",
+    "eslint-plugin-import": ">=2.2.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
     "eslint-plugin-flowtype": "^2.30.0",
+    "eslint-plugin-import": "^2.2.0",
     "mocha": "^2.4.5"
   }
 }
