--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^3.19.0",
     "eslint-plugin-flowtype": "^2.30.0",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.10.0",
     "mocha": "^2.4.5"
   }
 }
