--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.3.0",
+    "eslint-rule-documentation": "^1.0.0",
     "mocha": "^3.2.0"
   }
 }
