--- a/package.json
+++ b/package.json
@@ -22,19 +22,17 @@
   },
   "homepage": "https://github.com/github/eslint-plugin-github#readme",
   "dependencies": {
-    "babel-eslint": ">=8.0.0"
-  },
-  "peerDependencies": {
-    "eslint": ">=4.7.0",
+    "babel-eslint": ">=8.0.0",
     "eslint-plugin-import": ">=2.7.0",
     "eslint-rule-documentation": ">=1.0.0"
+  },
+  "peerDependencies": {
+    "eslint": ">=4.7.0"
   },
   "devDependencies": {
     "eslint": "^4.7.0",
     "eslint-plugin-flowtype": "^2.35.0",
-    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.3.0",
-    "eslint-rule-documentation": "^1.0.0",
     "mocha": "^3.2.0"
   }
 }
