--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "homepage": "https://github.com/github/eslint-plugin-github#readme",
   "dependencies": {
     "babel-eslint": ">=8.0.0",
+    "eslint-plugin-flowtype": ">=2.36.0",
     "eslint-plugin-import": ">=2.7.0",
+    "eslint-plugin-react": ">=7.4.0",
     "eslint-rule-documentation": ">=1.0.0"
   },
   "peerDependencies": {
@@ -31,8 +33,6 @@
   },
   "devDependencies": {
     "eslint": "^4.7.0",
-    "eslint-plugin-flowtype": "^2.35.0",
-    "eslint-plugin-react": "^7.3.0",
     "mocha": "^3.2.0"
   }
 }
