--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "homepage": "https://github.com/github/eslint-plugin-github#readme",
   "dependencies": {
     "babel-eslint": ">=8.0.0",
+    "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-flowtype": ">=2.36.0",
     "eslint-plugin-import": ">=2.7.0",
+    "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": ">=7.4.0",
     "eslint-rule-documentation": ">=1.0.0"
   },
