--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-import": ">=2.7.0",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": ">=7.4.0",
-    "eslint-rule-documentation": ">=1.0.0"
+    "eslint-rule-documentation": ">=1.0.0",
+    "prettier": "^1.7.4"
   },
   "peerDependencies": {
     "eslint": ">=4.7.0"
