--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   "homepage": "https://github.com/github/eslint-plugin-github#readme",
   "dependencies": {
     "babel-eslint": ">=8.0.0",
-    "eslint-config-prettier": "^2.6.0",
+    "eslint-config-prettier": ">=2.6.0",
     "eslint-plugin-flowtype": ">=2.36.0",
     "eslint-plugin-import": ">=2.7.0",
-    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-prettier": ">=2.3.0",
     "eslint-plugin-react": ">=7.4.0",
     "eslint-rule-documentation": ">=1.0.0",
-    "prettier": "^1.7.4"
+    "prettier": ">=1.7.0"
   },
   "peerDependencies": {
     "eslint": ">=4.7.0"
