--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-prettier": ">=2.6.0",
     "eslint-plugin-flowtype": ">=2.36.0",
     "eslint-plugin-import": ">=2.7.0",
+    "eslint-plugin-jsx-a11y": ">=6.0.2",
     "eslint-plugin-prettier": ">=2.3.0",
     "eslint-plugin-react": ">=7.4.0",
     "eslint-rule-documentation": ">=1.0.0",
