--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "bin": {
+    "eslint-github-init": "bin/eslint-github-init.js",
     "eslint-ignore-errors": "bin/eslint-ignore-errors.js",
     "npm-check-github-package-requirements": "bin/npm-check-github-package-requirements.js"
   },
@@ -31,6 +32,7 @@
     "eslint-plugin-prettier": ">=2.3.0",
     "eslint-plugin-react": ">=7.4.0",
     "eslint-rule-documentation": ">=1.0.0",
+    "inquirer": "^3.3.0",
     "prettier": ">=1.7.0"
   },
   "peerDependencies": {
