--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-config-prettier": ">=2.6.0",
     "eslint-plugin-flowtype": ">=2.36.0",
     "eslint-plugin-import": ">=2.7.0",
-    "eslint-plugin-jest": "^21.2.0",
+    "eslint-plugin-jest": ">=21.0.0",
     "eslint-plugin-jsx-a11y": ">=6.0.0",
     "eslint-plugin-prettier": ">=2.3.0",
     "eslint-plugin-react": ">=7.4.0",
