--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-jsx-a11y": ">=6.0.0",
     "eslint-plugin-prettier": ">=2.3.0",
     "eslint-plugin-react": ">=7.4.0",
+    "eslint-plugin-relay": ">=0.0.19",
     "eslint-rule-documentation": ">=1.0.0",
     "inquirer": "^3.3.0",
     "prettier": ">=1.7.0"
