--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-eslint": ">=8.0.0",
     "eslint-config-prettier": ">=2.6.0",
     "eslint-plugin-flowtype": ">=2.36.0",
+    "eslint-plugin-graphql": "^1.5.0",
     "eslint-plugin-import": ">=2.7.0",
     "eslint-plugin-jest": ">=21.0.0",
     "eslint-plugin-jsx-a11y": ">=6.0.0",
