--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "eslint-rule-documentation": ">=1.0.0",
     "flow-bin": ">=0.61.0",
     "inquirer": "^3.3.0",
-    "prettier": ">=1.7.0"
+    "prettier": ">=1.7.0",
+    "read-pkg-up": "^3.0.0"
   },
   "peerDependencies": {
     "eslint": ">=4.8.0"
