--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "babel-eslint": ">=8.0.0",
     "eslint-config-prettier": ">=2.6.0",
     "eslint-plugin-flowtype": ">=2.36.0",
-    "eslint-plugin-graphql": ">=1.5.0",
+    "eslint-plugin-graphql": ">=2.0.0",
     "eslint-plugin-import": ">=2.7.0",
     "eslint-plugin-jest": ">=21.0.0",
     "eslint-plugin-jsx-a11y": ">=6.0.0",
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "eslint": "^4.8.0",
+    "graphql": "^0.13.0",
     "mocha": "^4.0.1"
   }
 }
