--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "babel-eslint": ">=8.0.0",
     "eslint-config-prettier": ">=2.6.0",
     "eslint-plugin-flowtype": ">=2.36.0",
-    "eslint-plugin-graphql": ">=2.0.0",
+    "eslint-plugin-graphql": "^2.1.0",
     "eslint-plugin-import": ">=2.7.0",
     "eslint-plugin-jest": ">=21.0.0",
     "eslint-plugin-jsx-a11y": ">=6.0.0",
