--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.25.1",
   "description": "An opinionated collection of ESLint shared configs and rules used by GitHub.",
   "main": "lib/index.js",
-  "entries": ["lib/formatters/stylish-fixes.js"],
+  "entries": [
+    "lib/formatters/stylish-fixes.js"
+  ],
   "bin": {
     "eslint-github-init": "bin/eslint-github-init.js",
     "eslint-ignore-errors": "bin/eslint-ignore-errors.js",
