--- a/package.json
+++ b/package.json
@@ -44,16 +44,17 @@
     "eslint-plugin-react": ">=7.7.0",
     "eslint-plugin-relay": ">=0.0.21",
     "eslint-rule-documentation": ">=1.0.0",
-    "flow-bin": ">=0.70.0",
     "inquirer": "^5.2.0",
     "prettier": ">=1.12.0",
     "read-pkg-up": "^3.0.0"
   },
   "peerDependencies": {
-    "eslint": ">=4.19.0"
+    "eslint": ">=4.19.0",
+    "flow-bin": ">=0.70.0"
   },
   "devDependencies": {
     "eslint": "^4.8.0",
+    "flow-bin": ">=0.70.0",
     "graphql": "^0.13.0",
     "mocha": "^5.1.0"
   }
