generate tslint config and use tslint-config-prettier to play nice with prettier

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier": ">=1.12.0",
     "read-pkg-up": "^4.0.0",
     "svg-element-attributes": "^1.2.1",
+    "tslint-config-prettier": "^1.17.0",
     "typescript-eslint-parser": "^21.0.1"
   },
   "peerDependencies": {
