--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
   },
   "peerDependencies": {
     "eslint": ">=4.19.0",
-    "flow-bin": ">=0.70.0"
+    "flow-bin": ">=0.70.0",
+    "graphql": ">=14.0.0"
   },
   "files": [
     "bin/*",
