--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "babel-eslint": ">=8.2.0",
-    "eslint-config-prettier": ">=2.9.0",
+    "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-eslint-comments": ">=3.0.1",
     "eslint-plugin-flowtype": ">=2.49.3",
     "eslint-plugin-graphql": ">=3.0.1",
