--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-graphql": ">=3.0.1",
     "eslint-plugin-import": ">=2.11.0",
     "eslint-plugin-jest": ">=21.15.0",
+    "eslint-plugin-jsdoc": ">=15.5.2",
     "eslint-plugin-jsx-a11y": ">=6.0.0",
     "eslint-plugin-prettier": ">=2.6.0",
     "eslint-plugin-react": ">=7.7.0",
