--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "node": ">=8.11.1"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^1.3.0",
-    "@typescript-eslint/parser": "^1.3.0",
-    "babel-eslint": ">=8.2.0",
-    "eslint-config-prettier": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": ">=2.5.0",
+    "@typescript-eslint/parser": ">=2.5.0",
+    "babel-eslint": ">=10.0.3",
+    "eslint-config-prettier": ">=6.4.0",
     "eslint-plugin-eslint-comments": ">=3.0.1",
-    "eslint-plugin-flowtype": ">=2.49.3",
+    "eslint-plugin-flowtype": ">=4.3.0",
     "eslint-plugin-graphql": ">=3.0.1",
     "eslint-plugin-import": ">=2.11.0",
     "eslint-plugin-jest": ">=21.15.0",
@@ -48,10 +48,10 @@
     "eslint-plugin-react": ">=7.7.0",
     "eslint-plugin-relay": ">=1.0.0",
     "eslint-rule-documentation": ">=1.0.0",
-    "inquirer": "^6.0.0",
+    "inquirer": ">=6.0.0",
     "prettier": ">=1.12.0",
-    "read-pkg-up": "^6.0.0",
-    "svg-element-attributes": "^1.2.1"
+    "read-pkg-up": ">=6.0.0",
+    "svg-element-attributes": ">=1.2.1"
   },
   "peerDependencies": {
     "eslint": ">=4.19.0",
@@ -64,9 +64,9 @@
     "prettier.config.js"
   ],
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "flow-bin": "^0.102.0",
-    "graphql": "^14.0.2",
-    "mocha": "^6.1.4"
+    "eslint": ">=6.5.1",
+    "flow-bin": ">=0.110.1",
+    "graphql": ">=14.5.8",
+    "mocha": ">=6.2.2"
   }
 }
