--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint": ">=6.5.1",
     "flow-bin": ">=0.110.1",
     "graphql": ">=14.5.8",
-    "mocha": ">=6.2.2"
+    "mocha": ">=6.2.2",
+    "v8-compile-cache": "^2.1.0"
   }
 }
