--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "inquirer": ">=6.0.0",
     "prettier": ">=1.12.0",
     "read-pkg-up": ">=6.0.0",
+    "supports-color": "^7.1.0",
     "svg-element-attributes": ">=1.2.1"
   },
   "peerDependencies": {
