--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": ">=2.5.0",
     "@typescript-eslint/parser": ">=2.5.0",
-    "babel-eslint": ">=10.0.3",
     "eslint-config-prettier": ">=6.4.0",
     "eslint-plugin-eslint-comments": ">=3.0.1",
     "eslint-plugin-import": ">=2.18.2",
@@ -41,7 +40,8 @@
     "prettier": ">=1.12.0",
     "read-pkg-up": ">=6.0.0",
     "supports-color": "^7.1.0",
-    "svg-element-attributes": ">=1.2.1"
+    "svg-element-attributes": ">=1.2.1",
+    "to-fast-properties": "^3.0.1"
   },
   "peerDependencies": {
     "eslint": ">=4.19.0"
