--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier": ">=1.12.0",
     "svg-element-attributes": ">=1.3.1"
   },
+  "prettier": "@github/prettier-config",
   "peerDependencies": {
     "eslint": ">=4.19.0"
   },
@@ -44,6 +45,7 @@
     "prettier.config.js"
   ],
   "devDependencies": {
+    "@github/prettier-config": "0.0.4",
     "eslint": ">=6.8.0",
     "mocha": ">=7.1.1"
   }
