Remove `prettier.config.js` from files entry
see: https://github.com/github/eslint-plugin-github/commit/40fbc4a691b39389857904fafa297c6c53891465

--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
   },
   "files": [
     "bin/*",
-    "lib/*",
-    "prettier.config.js"
+    "lib/*"
   ],
   "devDependencies": {
     "@github/prettier-config": "0.0.4",
