--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint-plugin-prettier": ">=3.1.2",
     "eslint-rule-documentation": ">=1.0.0",
     "prettier": ">=1.12.0",
-    "svg-element-attributes": ">=1.3.1"
+    "svg-element-attributes": "^1.3.1"
   },
   "prettier": "@github/prettier-config",
   "peerDependencies": {
