--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
   },
   "homepage": "https://github.com/github/eslint-plugin-github#readme",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": ">=2.25.0",
-    "@typescript-eslint/parser": ">=2.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "eslint-config-prettier": ">=8.0.0",
-    "eslint-plugin-eslint-comments": ">=3.0.1",
-    "eslint-plugin-import": ">=2.20.1",
-    "eslint-plugin-prettier": ">=3.1.2",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-rule-documentation": ">=1.0.0",
-    "prettier": ">=1.12.0",
+    "prettier": "^2.2.1",
     "svg-element-attributes": ">=1.3.1"
   },
   "prettier": "@github/prettier-config",
   "peerDependencies": {
-    "eslint": ">=4.19.0"
+    "eslint": "^7.23.0"
   },
   "files": [
     "bin/*",
@@ -45,9 +45,9 @@
   ],
   "devDependencies": {
     "@github/prettier-config": "0.0.4",
-    "eslint": ">=7.0.0",
+    "eslint": "7.23.0",
     "eslint-visitor-keys": "^2.0.0",
-    "globals": "^13.6.0",
-    "mocha": ">=7.1.1"
+    "globals": "^13.7.0",
+    "mocha": "^8.3.2"
   }
 }
