--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@github/prettier-config": "0.0.4",
     "eslint": "7.23.0",
+    "eslint-plugin-eslint-plugin": "^2.3.0",
     "eslint-visitor-keys": "^2.0.0",
     "globals": "^13.7.0",
     "mocha": "^8.3.2"
