--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-i18n-text": "^1.0.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-no-only-tests": "^2.6.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-rule-documentation": ">=1.0.0",
@@ -48,7 +48,7 @@
   ],
   "devDependencies": {
     "@github/prettier-config": "0.0.4",
-    "eslint": "7.23.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-eslint-plugin": "^2.3.0",
     "eslint-visitor-keys": "^2.0.0",
     "globals": "^13.7.0",
