--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,11 @@ name: Publish
 on:
   release:
     types: [created]
-  workflow_dispatch: 
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to publish'
+        required: true
 
 jobs:
 
@@ -20,7 +24,7 @@ jobs:
       - run: npm test
       - run: npm version ${TAG_NAME} --git-tag-version=false
         env:
-          TAG_NAME: ${{ github.event.release.tag_name }}
+          TAG_NAME: ${{ github.event.inputs.version || github.event.release.tag_name }}
       - run: npm whoami; npm --ignore-scripts publish
         env:
          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
@@ -32,13 +36,17 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
       - run: npm version ${TAG_NAME} --git-tag-version=false
         env:
-          TAG_NAME: ${{ github.event.release.tag_name }}
+          TAG_NAME: ${{ github.event.inputs.version || github.event.release.tag_name }}
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14
+          registry-url: https://npm.pkg.github.com/
       - run: npm whoami; npm --ignore-scripts publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
