Don't publish to gpr
We've never published this package to GPR

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,14 +3,8 @@ name: Publish
 on:
   release:
     types: [created]
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to publish'
-        required: true
 
 jobs:
-
   publish-npm:
     runs-on: ubuntu-latest
     steps:
@@ -24,29 +18,7 @@ jobs:
       - run: npm test
       - run: npm version ${TAG_NAME} --git-tag-version=false
         env:
-          TAG_NAME: ${{ github.event.inputs.version || github.event.release.tag_name }}
+          TAG_NAME: ${{ github.event.release.tag_name }}
       - run: npm whoami; npm --ignore-scripts publish
         env:
          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-
-  publish-gpr:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
-      - run: npm version ${TAG_NAME} --git-tag-version=false
-        env:
-          TAG_NAME: ${{ github.event.inputs.version || github.event.release.tag_name }}
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
-          registry-url: https://npm.pkg.github.com/
-      - run: npm --ignore-scripts publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
