--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: 14
           registry-url: https://registry.npmjs.org/
+          cache: npm
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
