--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "pretest": "mkdir -p node_modules/ && ln -fs $(pwd) node_modules/",
     "eslint-check": "eslint-config-prettier .eslintrc.js",
-    "test": "npm run eslint-check && eslint . && mocha tests/"
+    "coverage": "nyc mocha",
+    "test": "npm run eslint-check && eslint . && mocha"
   },
   "repository": {
     "type": "git",
@@ -51,6 +52,7 @@
     "@github/prettier-config": "0.0.4",
     "eslint": "^8.0.1",
     "eslint-plugin-eslint-plugin": "^4.0.3",
-    "mocha": "^9.1.3"
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0"
   }
 }
