--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/github/eslint-plugin-github#readme",
   "dependencies": {
+    "@github/browserslist-config": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint-config-prettier": ">=8.0.0",
@@ -42,6 +43,7 @@
     "svg-element-attributes": "^1.3.1"
   },
   "prettier": "@github/prettier-config",
+  "browserslist": "@github/browserslist-config",
   "peerDependencies": {
     "eslint": "^8.0.1"
   },
