--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@github/browserslist-config": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
+    "aria-query": "^5.1.3",
     "eslint-config-prettier": ">=8.0.0",
     "eslint-plugin-escompat": "^3.3.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
