--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,7 +12,11 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version:
+          - 14
+          - 16
+          - 18
+          - 19
 
     steps:
       - uses: actions/checkout@v3
