docs: automate docs with eslint-doc-generator

--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "eslint-ignore-errors": "bin/eslint-ignore-errors.js"
   },
   "scripts": {
-    "pretest": "mkdir -p node_modules/ && ln -fs $(pwd) node_modules/",
     "eslint-check": "eslint-config-prettier .eslintrc.js",
-    "test": "npm run eslint-check && eslint . && mocha tests/**/*.js tests/"
+    "lint": "npm-run-all \"lint:*\"",
+    "lint:eslint-docs": "npm run update:eslint-docs -- --check",
+    "lint:js": "eslint .",
+    "pretest": "mkdir -p node_modules/ && ln -fs $(pwd) node_modules/",
+    "test": "npm run eslint-check && npm run lint && mocha tests/**/*.js tests/",
+    "update:eslint-docs": "eslint-doc-generator"
   },
   "repository": {
     "type": "git",
@@ -56,7 +60,9 @@
     "@github/prettier-config": "0.0.6",
     "chai": "^4.3.6",
     "eslint": "^8.0.1",
+    "eslint-doc-generator": "^1.4.3",
     "eslint-plugin-eslint-plugin": "^5.0.0",
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "npm-run-all": "^4.1.5"
   }
 }
