--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,10 +4,10 @@
   "name": "Node.js",
   "build": {
     "dockerfile": "Dockerfile",
-    // Update 'VARIANT' to pick a Node version: 16, 14, 12.
+    // Update 'VARIANT' to pick a Node version: 20, 18.
     // Append -bullseye or -buster to pin to an OS version.
     // Use -bullseye variants on local arm64/Apple Silicon.
-    "args": {"VARIANT": "22"}
+    "args": {"VARIANT": "20"}
   },
 
   // Set *default* container specific settings.json values on container create.
