--- a/package.json
+++ b/package.json
@@ -57,11 +57,14 @@
     "lib/*"
   ],
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
     "@github/prettier-config": "0.0.6",
     "chai": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-doc-generator": "^1.4.3",
     "eslint-plugin-eslint-plugin": "^6.1.0",
+    "globals": "^15.11.0",
     "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5"
   }
