--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-no-only-tests": "^3.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "eslint-rule-documentation": ">=1.0.0",
     "jsx-ast-utils": "^3.3.2",
     "prettier": "^3.0.0",
@@ -50,18 +49,23 @@
   "prettier": "@github/prettier-config",
   "browserslist": "@github/browserslist-config",
   "peerDependencies": {
-    "eslint": "^8.0.1"
+    "eslint": "^9.13.0"
   },
   "files": [
     "bin/*",
     "lib/*"
   ],
   "devDependencies": {
+    "@eslint/compat": "^1.2.2",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
     "@github/prettier-config": "0.0.6",
     "chai": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-doc-generator": "^1.4.3",
+    "eslint": "^9.13.0",
+    "eslint-doc-generator": "^1.7.1",
     "eslint-plugin-eslint-plugin": "^6.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.11.0",
     "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5"
   }
