--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
   "homepage": "https://github.com/github/eslint-plugin-github#readme",
   "dependencies": {
     "@github/browserslist-config": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
     "aria-query": "^5.3.0",
     "eslint-config-prettier": ">=8.0.0",
     "eslint-plugin-escompat": "^3.11.3",
@@ -44,7 +42,9 @@
     "eslint-rule-documentation": ">=1.0.0",
     "jsx-ast-utils": "^3.3.2",
     "prettier": "^3.0.0",
-    "svg-element-attributes": "^1.3.1"
+    "svg-element-attributes": "^1.3.1",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.12.2"
   },
   "prettier": "@github/prettier-config",
   "browserslist": "@github/browserslist-config",
