--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "aria-query": "^5.3.0",
-    "eslint-config-prettier": ">=8.0.0",
-    "eslint-plugin-escompat": "^3.11.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-escompat": "^3.11.4",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-i18n-text": "^1.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-no-only-tests": "^3.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-rule-documentation": ">=1.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-rule-documentation": "^1.0.23",
     "jsx-ast-utils": "^3.3.2",
     "prettier": "^3.0.0",
     "svg-element-attributes": "^1.3.1"
@@ -50,7 +50,7 @@
   "prettier": "@github/prettier-config",
   "browserslist": "@github/browserslist-config",
   "peerDependencies": {
-    "eslint": "^8.0.1"
+    "eslint": "^9.14.0"
   },
   "files": [
     "bin/*",
@@ -59,7 +59,7 @@
   "devDependencies": {
     "@github/prettier-config": "0.0.6",
     "chai": "^5.0.0",
-    "eslint": "^8.0.1",
+    "eslint": "^9.14.0",
     "eslint-doc-generator": "^1.4.3",
     "eslint-plugin-eslint-plugin": "^6.1.0",
     "mocha": "^10.0.0",
