--- a/.github/workflows/eslint-version-compatibility.yml
+++ b/.github/workflows/eslint-version-compatibility.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22' # Use Node.js 16 for compatibility; adjust if necessary
+          node-version: '22'
 
       - name: Install dependencies
         run: npm ci
