--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lint:js": "eslint .",
     "pretest": "mkdir -p node_modules/ && ln -fs $(pwd) node_modules/",
     "test": "npm run eslint-check && npm run lint && mocha tests/**/*.js tests/**/*.mjs",
-    "update:eslint-docs": "eslint-doc-generator"
+    "update:eslint-docs": "eslint-doc-generator",
+    "test-example:legacy": "cd test-examples/legacy && npm install && npm run lint",
+    "test-example:flat": "cd test-examples/flat && npm install && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -29,8 +31,9 @@
   },
   "homepage": "https://github.com/github/eslint-plugin-github#readme",
   "dependencies": {
+    "@eslint/compat": "^1.2.2",
+    "@eslint/eslintrc": "^3.1.0",
     "@github/browserslist-config": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "aria-query": "^5.3.0",
     "eslint-config-prettier": ">=8.0.0",
@@ -41,16 +44,15 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-no-only-tests": "^3.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "eslint-rule-documentation": ">=1.0.0",
     "jsx-ast-utils": "^3.3.2",
     "prettier": "^3.0.0",
     "svg-element-attributes": "^1.3.1"
   },
   "prettier": "@github/prettier-config",
-  "browserslist": "@github/browserslist-config",
+  "browserslist": "extends @github/browserslist-config",
   "peerDependencies": {
-    "eslint": "^8.0.1"
+    "eslint": "^8 || ^9"
   },
   "files": [
     "bin/*",
@@ -59,9 +61,10 @@
   "devDependencies": {
     "@github/prettier-config": "0.0.6",
     "chai": "^5.0.0",
-    "eslint": "^8.0.1",
+    "eslint": "^8 || ^9",
     "eslint-doc-generator": "^1.4.3",
     "eslint-plugin-eslint-plugin": "^6.1.0",
+    "eslint-plugin-github": "^5.0.2",
     "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5"
   }
