--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@eslint/compat": "^1.2.2",
     "@eslint/eslintrc": "^3.1.0",
     "@github/browserslist-config": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.0.0",
     "aria-query": "^5.3.0",
     "eslint-config-prettier": ">=8.0.0",
@@ -44,6 +45,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-no-only-tests": "^3.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-rule-documentation": ">=1.0.0",
     "jsx-ast-utils": "^3.3.2",
     "prettier": "^3.0.0",
