--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "pretest": "mkdir -p node_modules/ && ln -fs $(pwd) node_modules/",
     "test": "npm run eslint-check && npm run lint && mocha tests/**/*.js tests/**/*.mjs",
     "update:eslint-docs": "eslint-doc-generator",
-    "test-example:legacy": "cd test-examples/legacy && npm install && npm run lint",
-    "test-example:flat": "cd test-examples/flat && npm install && npm run lint"
+    "test-examples:legacy": "cd test-examples/legacy && npm install && npm run lint",
+    "test-examples:flat": "cd test-examples/flat && npm install && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/github/eslint-plugin-github#readme",
   "dependencies": {
+    "@eslint/compat": "^1.2.2",
     "@eslint/eslintrc": "^3.1.0",
     "@github/browserslist-config": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
@@ -46,6 +47,7 @@
     "eslint-plugin-no-only-tests": "^3.0.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-rule-documentation": ">=1.0.0",
+    "globals": "^15.12.0",
     "jsx-ast-utils": "^3.3.2",
     "prettier": "^3.0.0",
     "svg-element-attributes": "^1.3.1"
@@ -62,7 +64,7 @@
   "devDependencies": {
     "@github/prettier-config": "0.0.6",
     "chai": "^5.0.0",
-    "eslint": "^8 || ^9",
+    "eslint": "^9.14.0",
     "eslint-doc-generator": "^1.4.3",
     "eslint-plugin-eslint-plugin": "^6.1.0",
     "mocha": "^10.0.0",
